--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "react-dom": "^16.6.0",
     "react-icons": "^3.2.2",
     "react-responsive-modal": "^3.5.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "styled-components": "^4.0.3",
     "tsc-watch": "^1.0.30",
     "typeface-roboto": "^0.0.54",
     "typescript": "^3.1.6",
+    "webpack": "^4.25.1",
     "yarn": "^1.12.1"
   },
   "scripts": {
