--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": ["es5", "es2015", "es6", "es2016", "es7", "es2017", "dom"],
+    "target": "es5",
+    "lib": ["es6", "es2016", "es7", "es2017", "dom"],
     "allowJs": true,
     "skipLibCheck": false,
     "esModuleInterop": true,
