--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
+    "@types/node": "^10.12.2",
+    "@types/react-dom": "^16.0.9",
     "dotenv": "^6.1.0",
     "material-design-icons": "^3.0.1",
     "react": "^16.6.0",
@@ -16,7 +19,6 @@
     "tsc-watch": "^1.0.30",
     "typeface-roboto": "^0.0.54",
     "typescript": "^3.1.6",
-    "webpack": "^4.25.1",
     "yarn": "^1.12.1"
   },
   "scripts": {
