--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "@types/node": "^10.12.2",
     "@types/react-dom": "^16.0.9",
+    "classnames": "^2.2.6",
     "dotenv": "^6.1.0",
     "material-design-icons": "^3.0.1",
     "prettier": "^1.14.3",
