--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^16.0.9",
     "classnames": "^2.2.6",
     "dotenv": "^6.1.0",
+    "jwt-decode": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "prettier": "^1.14.3",
     "react": "^16.6.0",
